--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Personal Branding</title>
-</head>
+</head> <link rel="stylesheet" href="style.css">
+
 <body>
     <header>
         <h1>Nama Anda</h1>
