--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
         <h1>Nama Anda</h1>
         <p>Alamat | Email | Deskripsi Singkat</p>
-        <a href="https://linkedin.com/in/username">LinkedIn</a> |
-        <a href="https://github.com/username">GitHub</a>
+        <a href="www.linkedin.com/in/yetro-sitohang-26771b358">LinkedIn</a> |
+        <a href="https://github.com/yetro-alt">GitHub</a>
     </header>
 
     <section>
